Implemented callbacks in Kotlin/Native