@@ -1,27 +1,63 @@
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+
 plugins {
-    id("java")
+    alias(libs.plugins.kotlin.multiplatform)
+    alias(libs.plugins.kotlin.android)
     id("maven-publish")
 }
 
 group = "com.huskerdev"
 version = projectDir.parentFile.resolve("VERSION").readText()
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_1_9
-    targetCompatibility = JavaVersion.VERSION_1_9
-}
+kotlin {
+    jvm {
+        compilations.configureEach {
+            compileTaskProvider.get().compilerOptions {
+                jvmTarget = JvmTarget.JVM_11
+            }
+        }
+    }
 
-tasks.jar {
-    archiveBaseName = "native-kt-runtime"
-}
+    js {
+        browser()
+        nodejs()
+    }
 
-tasks.withType<JavaCompile>().configureEach {
-    options.compilerArgs.addAll(listOf(
-        "--add-modules", "jdk.internal.vm.ci",
-        "--add-exports", "jdk.internal.vm.ci/jdk.vm.ci.code=ALL-UNNAMED",
-        "--add-exports", "jdk.internal.vm.ci/jdk.vm.ci.code.site=ALL-UNNAMED",
-        "--add-exports", "jdk.internal.vm.ci/jdk.vm.ci.hotspot=ALL-UNNAMED",
-        "--add-exports", "jdk.internal.vm.ci/jdk.vm.ci.meta=ALL-UNNAMED",
-        "--add-exports", "jdk.internal.vm.ci/jdk.vm.ci.runtime=ALL-UNNAMED",
-    ))
+    android {
+        namespace = group.toString()
+        compileSdk {
+            version = release(26)
+        }
+    }
+
+    mingwX64()
+
+    linuxX64()
+    linuxArm64()
+
+    macosX64()
+    macosArm64()
+
+    iosX64()
+    iosArm64()
+    iosSimulatorArm64()
+
+    watchosX64()
+    watchosArm32()
+    watchosArm64()
+    watchosDeviceArm64()
+    watchosSimulatorArm64()
+
+    tvosX64()
+    tvosArm64()
+    tvosSimulatorArm64()
+
+    androidNativeX64()
+    androidNativeX86()
+    androidNativeArm32()
+    androidNativeArm64()
+
+    sourceSets.jvmMain.dependencies {
+        api(project(":native-kt-runtime-jvm"))
+    }
 }
